# test-task-adaptiq

./: README.md  pyproject.toml
airport_service/: conftest.py
airport_service/src/: client.py  constans.py
airport_service/tests/: test_airoports.py
saucedemo/env_configs/: dev.yaml
saucedemo/src/: config.py  constants.py  helper.py
saucedemo/src/pages/: base_page.py  header.py  inventory_page.py  login_page.py
saucedemo/tests/: conftest.py  test_inventory.py
